AC_INIT(configure.in) dnl a source file from your sub dir

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(avrecord, 2.0.0) dnl searches for some needed programs

dnl generate the config header
AM_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

AC_ARG_WITH([tests],
    AS_HELP_STRING([--with-test], [Do compile development test programs. It's not recommended though. You realy don't need them.]))
AM_CONDITIONAL([COMPILE_TESTS], [test "x$with_tests" == "xyes"])

AC_ARG_WITH([avrtuner],
    AS_HELP_STRING([--without-avrtuner], [Do not compile AVRTuner. Thus you can compile only avrecord which doesn't need Gtkmm or SDL]))
AM_CONDITIONAL([COMPILE_AVRTUNER], [test "x$with_avrtuner" != "xno"])

AC_ARG_ENABLE([debug],
	AS_HELP_STRING([--enable-debug],
    [Compile debug version.])
)
AS_IF([test "x$enable_debug" == "xyes"],
      [DEBUG_FLAGS="-O0 -pedantic -Wall -g3 -DDEBUG_VERSION"],
      [DEBUG_FLAGS="-O2 -pedantic -Wall -g0"])
CPPFLAGS="$CPPFLAGS $DEBUG_FLAGS"

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

dnl PACKAGE set before
AC_C_BIGENDIAN

dnl Checks for libraries.
AC_CHECK_LIB(asound,
       snd_pcm_open,
       LIBS="$LIBS -lasound",
       AC_MSG_ERROR([*** ALSA sound library not found!])
)

AC_CHECK_LIB(avcodec,
       avcodec_init,
       LIBS="$LIBS -lavcodec",
       AC_MSG_ERROR([*** avcodec form FFmpeg library not found!])
)
AC_CHECK_LIB(avformat,
       av_free,
       LIBS="$LIBS -lavformat",
       AC_MSG_ERROR([*** avformat from FFmpeg library not found!])
)
AC_CHECK_LIB(swscale,
       swscale_version,
       LIBS="$LIBS -lswscale",
       AC_MSG_ERROR([*** swscale from FFmpeg library not found!])
)

AC_CHECK_LIB(jpeg,
       jpeg_set_defaults,
       LIBS="$LIBS -ljpeg",
       AC_MSG_ERROR([*** libjpeg library not found!])
)

PKG_CHECK_MODULES([LIBCONFIGXX], [libconfig++ >= 1.3],,
       AC_MSG_ERROR([libconfig++ 1.3 or newer not found.])
)
LIBS="$LIBS $LIBCONFIGXX_LIBS"
CPPFLAGS="$CPPFLAGS $LIBCONFIGXX_CFLAGS"

if test "x$with_tests" == "xyes" || test "x$with_avrtuner" != "xno";
then
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, :, AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
AC_SUBST(SDL_CFLAGS)
AC_SUBST(SDL_LIBS)

PKG_CHECK_MODULES([GTHREAD], [gthread-2.0 >= 2.16.0])
AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)

PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.16.0])
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

PKG_CHECK_MODULES([GTKSVMM], [gtksourceviewmm-2.0 >= 2.0.0])
AC_SUBST(GTKSVMM_CFLAGS)
AC_SUBST(GTKSVMM_LIBS)
fi

AC_SUBST(LIBS)
AC_SUBST(CPPFLAGS)

AC_OUTPUT(Makefile \
		  po/Makefile \
		  doc/Makefile \
		  src/Makefile \
		  src/avrtuner/Makefile \
		  src/libavtools/Makefile \
		  tests/Makefile)
