INCLUDES = $(all_includes)
METASOURCES = AUTO
libavtools_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libavtools.la
libavtools_la_SOURCES = avifile.cpp configfile.cpp img_tools.cpp sndstream.cpp \
	vidstream.cpp
noinst_HEADERS = avifile.h common.h configfile.h fifo.h img_tools.h recorder.h\
	sndstream.h utimer.h vidstream.h
