INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libavtools.la
libavtools_la_SOURCES = avconfig.cpp avifile.cpp buffer-ring.cpp img_tools.cpp \
	jpegconverter.cpp sndstream.cpp vidstream.cpp
noinst_HEADERS = avconfig.h avifile.h buffer-ring.h common.h fifo.h img_tools.h \
	jpegconverter.h recorder.h sndstream.h utimer.h vidstream.h
